wip: card design

--- a/Card-layout/layout-1/index.html
+++ b/Card-layout/layout-1/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" >
   <title>Layout</title>
   <link rel="stylesheet" href="/css/ccl0002.css" type="text/css">
-  <link href="/fonts/Noto_Sans/NotoSans-Bold.ttf" rel="stylesheet">
+  <!-- <link href="/fonts/Noto_Sans/NotoSans-Bold.ttf" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
