--- a/Card-layout/layout-2/index.html
+++ b/Card-layout/layout-2/index.html
@@ -21,9 +21,8 @@
 				</div>
 			</div>
 			<div class="center">
-				<div class="triangle">
-          <div class="inner-triangle">
-					</div>
+				<div id="triangle"></div>
+        <div id="triangle-inner"></div>
 			</div>
 			<div class="bottom">
 				<div class="descrption">
