Remove unnecessary file and rename folders and file name

--- a/Card-layout/CCL0012/index.html
+++ b/Card-layout/CCL0012/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Layout</title>
-  <link rel="stylesheet" href="/css/ccl0002.css" type="text/css">
+  <title>CCl0012</title>
+  <link rel="stylesheet" href="/css/ccl0012.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap" rel="stylesheet">
 </head>
 <body>
