--- a/Card-layout/CCL0008/index.html
+++ b/Card-layout/CCL0008/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Layout-2</title>
-	<link rel="stylesheet" href="/css/ccl0004.css" type="text/css">
+	<title>CCL0008</title>
+	<link rel="stylesheet" href="/css/ccl0008.css" type="text/css">
 </head>
 
 <body>
