--- a/Card-layout/CCL0008/index.html
+++ b/Card-layout/CCL0008/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CCL0008</title>
   <link rel="stylesheet" href="/css/ccl0008.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&family=Lexend+Giga&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="main-container">
@@ -17,8 +17,8 @@
 
       
         <div class="person-main-info">
-          <div class="person-name"><span>James</span> Frank</div>
-          <div class="person-position">Director</div>
+          <p class="person-name"><span>James</span> Frank</p>
+          <p class="person-position">Director</p>
       </div>
 
     </div>
